chore: upgrade dependencies and align Node/pnpm versions across packages

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -5,6 +5,7 @@
     "allowJs": true,
     "noEmit": true,
     "incremental": true,
+    "moduleResolution": "Bundler",
     "isolatedModules": true,
     "plugins": [
       {
