--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -2,6 +2,11 @@
   "name": "@grofit/api",
   "private": true,
   "version": "0.1.0",
+  "packageManager": "pnpm@8.15.6",
+  "engines": {
+    "node": ">=20.18.0 <21",
+    "pnpm": ">=8.15.6"
+  },
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/main.ts",
     "build": "tsc -p tsconfig.json",
@@ -9,16 +14,16 @@
     "typecheck": "tsc -p tsconfig.json"
   },
   "dependencies": {
-    "@nestjs/common": "^10.4.5",
-    "@nestjs/core": "^10.4.5",
-    "@nestjs/platform-fastify": "^10.4.5",
-    "fastify": "^4.28.1",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "@nestjs/common": "^11.1.6",
+    "@nestjs/core": "^11.1.6",
+    "@nestjs/platform-fastify": "^11.1.6",
+    "fastify": "^5.5.0",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.2"
   },
   "devDependencies": {
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.5",
+    "typescript": "^5.9.2",
     "@types/node": "^20.12.12"
   }
 }
