--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -2,6 +2,11 @@
   "name": "@grofit/web",
   "private": true,
   "version": "0.1.0",
+  "packageManager": "pnpm@8.15.6",
+  "engines": {
+    "node": ">=20.18.0 <21",
+    "pnpm": ">=8.15.6"
+  },
   "scripts": {
     "dev": "next dev -p 3000",
     "build": "next build",
@@ -10,16 +15,17 @@
     "typecheck": "tsc -p tsconfig.json"
   },
   "dependencies": {
-    "next": "^14.2.5",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "@tailwindcss/postcss": "^4.1.12",
+    "next": "^15.5.2",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1"
   },
   "devDependencies": {
     "@types/react": "19.1.11",
-    "autoprefixer": "^10.4.19",
-    "eslint-config-next": "15.5.0",
-    "postcss": "^8.4.38",
-    "tailwindcss": "^3.4.7",
-    "typescript": "^5.4.5"
+    "autoprefixer": "^10.4.21",
+    "eslint-config-next": "15.5.2",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.12",
+    "typescript": "^5.9.2"
   }
 }
