--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -2,6 +2,11 @@
   "name": "@grofit/worker",
   "private": true,
   "version": "0.1.0",
+  "packageManager": "pnpm@8.15.6",
+  "engines": {
+    "node": ">=20.18.0 <21",
+    "pnpm": ">=8.15.6"
+  },
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc -p tsconfig.json",
@@ -9,13 +14,13 @@
     "typecheck": "tsc -p tsconfig.json"
   },
   "dependencies": {
-    "bullmq": "^5.17.0",
-    "dotenv": "^16.4.5",
-    "ioredis": "^5.3.2"
+    "bullmq": "^5.58.2",
+    "dotenv": "^17.2.1",
+    "ioredis": "^5.7.0"
   },
   "devDependencies": {
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.4.5",
+    "typescript": "^5.9.2",
     "@types/node": "^20.12.12"
   }
 }
