--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -2,6 +2,11 @@
   "name": "@grofit/db",
   "private": true,
   "version": "0.1.0",
+  "packageManager": "pnpm@8.15.6",
+  "engines": {
+    "node": ">=20.18.0 <21",
+    "pnpm": ">=8.15.6"
+  },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -10,12 +15,12 @@
     "typecheck": "tsc -p tsconfig.json"
   },
   "dependencies": {
-    "drizzle-orm": "^0.31.2",
-    "pg": "^8.11.5",
-    "dotenv": "^16.4.5"
+    "drizzle-orm": "^0.44.5",
+    "pg": "^8.16.3",
+    "dotenv": "^17.2.1"
   },
   "devDependencies": {
-    "drizzle-kit": "^0.24.0",
-    "typescript": "^5.4.5"
+    "drizzle-kit": "^0.31.4",
+    "typescript": "^5.9.2"
   }
 }
