--- a/packages/scheduler/package.json
+++ b/packages/scheduler/package.json
@@ -2,6 +2,11 @@
   "name": "@grofit/scheduler",
   "private": true,
   "version": "0.1.0",
+  "packageManager": "pnpm@8.15.6",
+  "engines": {
+    "node": ">=20.18.0 <21",
+    "pnpm": ">=8.15.6"
+  },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -10,7 +15,7 @@
     "typecheck": "tsc -p tsconfig.json"
   },
   "devDependencies": {
-    "typescript": "^5.4.5",
+    "typescript": "^5.9.2",
     "@types/node": "^20.12.12"
   }
 }
