--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -2,6 +2,11 @@
   "name": "@grofit/ui",
   "private": true,
   "version": "0.1.0",
+  "packageManager": "pnpm@8.15.6",
+  "engines": {
+    "node": ">=20.18.0 <21",
+    "pnpm": ">=8.15.6"
+  },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -14,8 +19,8 @@
     "react-dom": ">=18"
   },
   "devDependencies": {
-    "typescript": "^5.4.5",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0"
+    "typescript": "^5.9.2",
+    "@types/react": "^19.1.11",
+    "@types/react-dom": "^19.1.8"
   }
 }
