--- a/packages/wfm-sdk/package.json
+++ b/packages/wfm-sdk/package.json
@@ -2,6 +2,11 @@
   "name": "@grofit/wfm-sdk",
   "private": true,
   "version": "0.1.0",
+  "packageManager": "pnpm@8.15.6",
+  "engines": {
+    "node": ">=20.18.0 <21",
+    "pnpm": ">=8.15.6"
+  },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
@@ -13,6 +18,6 @@
     "@grofit/core": "workspace:*"
   },
   "devDependencies": {
-    "typescript": "^5.4.5"
+    "typescript": "^5.9.2"
   }
 }
