feat: implement wfm-sdk with unit tests

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -3,6 +3,7 @@
     "target": "ES2020",
     "module": "ESNext",
     "lib": ["ES2020", "DOM"],
+    "types": ["vitest/globals"],
     "moduleResolution": "Node",
     "resolveJsonModule": true,
     "esModuleInterop": true,
