--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "pino-pretty": "^13.1.1",
     "prettier": "^3.6.2",
     "turbo": "^2.5.6",
+    "vitest": "^1.6.0",
     "typescript": "^5.9.2"
   },
   "lint-staged": {
