--- a/packages/wfm-sdk/package.json
+++ b/packages/wfm-sdk/package.json
@@ -12,10 +12,12 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "dev": "tsc -w -p tsconfig.json",
-    "typecheck": "tsc -p tsconfig.json"
+    "typecheck": "tsc -p tsconfig.json",
+    "test": "vitest run"
   },
   "dependencies": {
-    "@grofit/core": "workspace:*"
+    "@grofit/core": "workspace:*",
+    "@grofit/logger": "workspace:*"
   },
   "devDependencies": {
     "typescript": "^5.9.2"
