feat: implement BullMQ scheduler in API and deprecate scheduler package

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,7 +19,10 @@
     "@nestjs/platform-fastify": "^11.1.6",
     "fastify": "^5.5.0",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.2"
+    "rxjs": "^7.8.2",
+    "@grofit/logger": "workspace:*",
+    "bullmq": "^5.58.2",
+    "ioredis": "^5.7.0"
   },
   "devDependencies": {
     "ts-node-dev": "^2.0.0",
