--- a/env.example
+++ b/env.example
@@ -7,6 +7,16 @@ DATABASE_URL=postgres://postgres:postgres@localhost:5432/grofit
 # Redis
 REDIS_URL=redis://localhost:6379
 
+# Warframe Market (WFM) Live Orders
+# Target platform for live orders API calls: pc | ps4 | xb1 | swi
+WFM_PLATFORM=pc
+# Refresh interval in minutes for live orders polling
+LIVE_REFRESH_INTERVAL_MINUTES=2
+# Number of top popular items to refresh per interval
+LIVE_REFRESH_TOP_N=50
+# Optional comma-separated slugs to always include
+WATCHLIST_SLUGS=
+
 # Whisper log path (Windows default). If dotenv doesn't expand %LOCALAPPDATA%, replace with the absolute path.
 WHISPER_LOG_PATH=%LOCALAPPDATA%/Warframe/EE.log
 
