--- a/packages/wfm-sdk/package.json
+++ b/packages/wfm-sdk/package.json
@@ -7,8 +7,8 @@
     "node": ">=20.18.0 <21",
     "pnpm": ">=8.15.6"
   },
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/wfm-sdk/src/index.js",
+  "types": "dist/wfm-sdk/src/index.d.ts",
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "dev": "tsc -w -p tsconfig.json",
