feat(api): migrate to NestJS CLI tooling

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -8,14 +8,15 @@
     "pnpm": ">=8.15.6"
   },
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/main.ts",
-    "build": "tsc -p tsconfig.json",
+    "dev": "nest start --watch",
+    "build": "nest build",
     "start": "node dist/main.js",
     "typecheck": "tsc -p tsconfig.json"
   },
   "dependencies": {
     "@nestjs/common": "^11.1.6",
     "@nestjs/core": "^11.1.6",
+    "dotenv": "^17.2.1",
     "@nestjs/platform-fastify": "^11.1.6",
     "fastify": "^5.5.0",
     "reflect-metadata": "^0.2.2",
@@ -25,7 +26,6 @@
     "ioredis": "^5.7.0"
   },
   "devDependencies": {
-    "ts-node-dev": "^2.0.0",
     "typescript": "^5.9.2",
     "@types/node": "^20.12.12"
   }
