--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   ],
   "scripts": {
     "build": "turbo build",
+    "clean": "rm -rf .turbo && pnpm -r exec rm -rf dist",
     "dev": "turbo run dev --concurrency=20",
     "lint": "turbo run lint && eslint \"packages/**/*.{ts,tsx,js,jsx}\" \"apps/api/**/*.{ts,tsx,js,jsx}\" \"apps/worker/**/*.{ts,tsx,js,jsx}\" \"apps/web/**/*.{ts,tsx,js,jsx}\" --max-warnings=0",
     "lint:fix": "eslint \"packages/**/*.{ts,tsx,js,jsx}\" \"apps/api/**/*.{ts,tsx,js,jsx}\" \"apps/worker/**/*.{ts,tsx,js,jsx}\" \"apps/web/**/*.{ts,tsx,js,jsx}\" --fix",
@@ -40,6 +41,8 @@
     "pino-pretty": "^13.1.1",
     "prettier": "^3.6.2",
     "turbo": "^2.5.6",
+    "@nestjs/cli": "^11.0.10",
+    "ts-loader": "^9.5.1",
     "vitest": "^3.2.4",
     "typescript": "^5.9.2"
   },
