fix(event-bus): output CommonJS
- So that this package can be used in the NestJS apps (api and worker)

--- a/packages/event-bus/tsconfig.json
+++ b/packages/event-bus/tsconfig.json
@@ -2,10 +2,13 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "dist",
+    "rootDir": "src",
     "types": ["node"],
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "declaration": true
+    "module": "CommonJS",
+    "declaration": true,
+    "paths": {}
   },
   "include": ["src"]
 }
