--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -2,8 +2,9 @@
   "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": "src",
-    "declaration": true
+    "declaration": true,
+    "module": "CommonJS",
+    "moduleResolution": "Node"
   },
   "include": ["src"],
   "exclude": ["drizzle.config.ts"]
