--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -8,19 +8,32 @@
     "pnpm": ">=8.15.6"
   },
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "tsc -p tsconfig.json",
-    "start": "node dist/index.js",
+    "dev": "nest start --watch",
+    "build": "nest build",
+    "start": "node dist/main.js",
     "typecheck": "tsc -p tsconfig.json"
   },
   "dependencies": {
+    "@grofit/contracts": "workspace:*",
+    "@grofit/db": "workspace:*",
+    "@grofit/event-bus": "workspace:*",
+    "@grofit/logger": "workspace:*",
+    "@grofit/wfm-sdk": "workspace:*",
+    "@nestjs/bullmq": "^11.0.3",
+    "@nestjs/common": "^11.1.6",
+    "@nestjs/config": "^4.0.2",
+    "@nestjs/core": "^11.1.6",
     "bullmq": "^5.58.2",
     "dotenv": "^17.2.1",
-    "ioredis": "^5.7.0"
+    "drizzle-orm": "^0.44.5",
+    "ioredis": "^5.7.0",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.2"
   },
   "devDependencies": {
-    "ts-node-dev": "^2.0.0",
+    "@grofit/core": "workspace:*",
+    "@types/node": "^20.12.12",
     "typescript": "^5.9.2",
-    "@types/node": "^20.12.12"
+    "vitest": "^3.2.4"
   }
 }
