chore: upgrade Node to v22 and PNPM to v10.15

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -2,10 +2,10 @@
   "name": "@grofit/web",
   "private": true,
   "version": "0.1.0",
-  "packageManager": "pnpm@8.15.6",
+  "packageManager": "pnpm@10.15.0",
   "engines": {
-    "node": ">=20.18.0 <21",
-    "pnpm": ">=8.15.6"
+    "node": ">=22.18.0",
+    "pnpm": ">=10.15.0"
   },
   "scripts": {
     "dev": "next dev -p 3000",
