--- a/packages/wfm-sdk/package.json
+++ b/packages/wfm-sdk/package.json
@@ -2,10 +2,10 @@
   "name": "@grofit/wfm-sdk",
   "private": true,
   "version": "0.1.0",
-  "packageManager": "pnpm@8.15.6",
+  "packageManager": "pnpm@10.15.0",
   "engines": {
-    "node": ">=20.18.0 <21",
-    "pnpm": ">=8.15.6"
+    "node": ">=22.18.0",
+    "pnpm": ">=10.15.0"
   },
   "main": "dist/wfm-sdk/src/index.js",
   "types": "dist/wfm-sdk/src/index.d.ts",
