chore: project references with composite and rootDir options

--- a/packages/contracts/tsconfig.json
+++ b/packages/contracts/tsconfig.json
@@ -3,7 +3,9 @@
   "compilerOptions": {
     "module": "CommonJS",
     "outDir": "dist",
-    "declaration": true
+    "declaration": true,
+    "composite": true,
+    "rootDir": "src"
   },
   "include": ["src"]
 }
