--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -4,8 +4,10 @@
     "outDir": "dist",
     "declaration": true,
     "module": "CommonJS",
-    "moduleResolution": "Node"
+    "moduleResolution": "Node",
+    "rootDir": "src"
   },
   "include": ["src"],
-  "exclude": ["drizzle.config.ts"]
+  "exclude": ["drizzle.config.ts"],
+  "references": [{ "path": "../contracts" }]
 }
