refactor(build): standardize tsconfigs and package.json conventions
- Migrate tsconfig.json files to extend appropriate root presets (lib, nest, next)
- Sync package.json with root engines/packageManager and enforce typecheck scripts

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,11 +1,7 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "../../tsconfig.nest.json",
   "compilerOptions": {
-    "module": "CommonJS",
-    "outDir": "dist",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "types": ["node"]
+    "outDir": "dist"
   },
   "include": ["src"]
 }
