--- a/packages/event-bus/package.json
+++ b/packages/event-bus/package.json
@@ -5,8 +5,8 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "dev": "tsc -w -p tsconfig.json",
+    "build": "tsc -b",
+    "dev": "tsc -b -w",
     "typecheck": "tsc -p tsconfig.json"
   },
   "dependencies": {
@@ -20,5 +20,10 @@
   "devDependencies": {
     "typescript": "^5.9.2",
     "@types/node": "^20.12.12"
+  },
+  "packageManager": "pnpm@10.15.0",
+  "engines": {
+    "node": ">=22.18.0",
+    "pnpm": ">=10.15.0"
   }
 }
