--- a/packages/orders/package.json
+++ b/packages/orders/package.json
@@ -10,11 +10,12 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "dev": "tsc -w -p tsconfig.json",
-    "typecheck": "tsc -p tsconfig.json"
+    "build": "tsc -b",
+    "dev": "tsc -b -w",
+    "typecheck": "tsc -b --clean && tsc -b"
   },
   "dependencies": {
+    "@grofit/contracts": "workspace:*",
     "@grofit/core": "workspace:*",
     "@grofit/db": "workspace:*"
   },
