--- a/packages/plugins/log-watcher/package.json
+++ b/packages/plugins/log-watcher/package.json
@@ -31,9 +31,9 @@
     }
   },
   "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "dev": "tsc -w -p tsconfig.json",
-    "typecheck": "tsc -p tsconfig.json"
+    "build": "tsc -b",
+    "dev": "tsc -b -w",
+    "typecheck": "tsc -b --clean && tsc -b"
   },
   "devDependencies": {
     "typescript": "^5.9.2"
