--- a/packages/plugins/notifier/tsconfig.json
+++ b/packages/plugins/notifier/tsconfig.json
@@ -1,9 +1,7 @@
 {
-  "extends": "../../../tsconfig.base.json",
+  "extends": "../../../tsconfig.lib.json",
   "compilerOptions": {
     "outDir": "dist",
-    "declaration": true,
-    "composite": true,
     "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {}
