--- a/packages/wfm-sdk/package.json
+++ b/packages/wfm-sdk/package.json
@@ -7,12 +7,12 @@
     "node": ">=22.18.0",
     "pnpm": ">=10.15.0"
   },
-  "main": "dist/wfm-sdk/src/index.js",
-  "types": "dist/wfm-sdk/src/index.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc -p tsconfig.json",
-    "dev": "tsc -w -p tsconfig.json",
-    "typecheck": "tsc -p tsconfig.json",
+    "build": "tsc -b",
+    "dev": "tsc -b -w",
+    "typecheck": "tsc -b --clean && tsc -b",
     "test": "vitest run"
   },
   "dependencies": {
