--- a/packages/wfm-sdk/tsconfig.json
+++ b/packages/wfm-sdk/tsconfig.json
@@ -1,11 +1,11 @@
 {
-  "extends": "../../tsconfig.base.json",
+  "extends": "../../tsconfig.lib.json",
   "compilerOptions": {
     "outDir": "dist",
-    "declaration": true,
     "module": "CommonJS",
     "moduleResolution": "Node"
   },
   "include": ["src"],
-  "exclude": ["src/__tests__"]
+  "exclude": ["src/__tests__"],
+  "references": [{ "path": "../logger" }, { "path": "../contracts" }]
 }
