--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,19 +10,17 @@
     "strict": true,
     "baseUrl": ".",
     "paths": {
-      "@grofit/contracts": ["packages/contracts/src/index.ts"],
       "@grofit/core": ["packages/core/src/index.ts"],
       "@grofit/db": ["packages/db/src/index.ts"],
       "@grofit/event-bus": ["packages/event-bus/src/index.ts"],
       "@grofit/wfm-sdk": ["packages/wfm-sdk/src/index.ts"],
       "@grofit/pricing": ["packages/pricing/src/index.ts"],
       "@grofit/orders": ["packages/orders/src/index.ts"],
-      "@grofit/notifier": ["packages/notifier/src/index.ts"],
-      "@grofit/log-watcher": ["packages/log-watcher/src/index.ts"],
       "@grofit/logger": ["packages/logger/src/index.ts"],
       "@grofit/plugin-api": ["packages/plugin-api/src/index.ts"],
       "@grofit/ui": ["packages/ui/src/index.tsx"],
-      "@grofit/utils": ["packages/utils/src/index.ts"]
+      "@grofit/utils": ["packages/utils/src/index.ts"],
+      "@grofit/contracts": ["packages/contracts/src/index.ts"]
     }
   }
 }
