--- a/packages/event-bus/package.json
+++ b/packages/event-bus/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc -b",
     "dev": "tsc -b -w",
-    "typecheck": "tsc -p tsconfig.json"
+    "typecheck": "tsc -b tsconfig.json"
   },
   "dependencies": {
     "ioredis": "^5.7.0",
