--- a/packages/wfm-sdk/tsconfig.json
+++ b/packages/wfm-sdk/tsconfig.json
@@ -2,8 +2,7 @@
   "extends": "../../tsconfig.lib.json",
   "compilerOptions": {
     "outDir": "dist",
-    "module": "CommonJS",
-    "moduleResolution": "Node"
+    "rootDir": "src"
   },
   "include": ["src"],
   "exclude": ["src/__tests__"],
