--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "extends": "../../tsconfig.next.json",
+  "compilerOptions": {
+    "plugins": [{ "name": "next" }]
+  },
   "include": ["./", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
 }
