--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -10,8 +10,7 @@
   "scripts": {
     "dev": "nest start --watch",
     "build": "nest build",
-    "start": "node dist/main.js",
-    "typecheck": "tsc -p tsconfig.json"
+    "start": "node dist/main.js"
   },
   "dependencies": {
     "@grofit/contracts": "workspace:*",
@@ -26,6 +25,7 @@
     "bullmq": "^5.58.2",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.5",
+    "@duckdb/node-api": "^1.3.2-alpha.26",
     "ioredis": "^5.7.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2"
