--- a/packages/logger/tsconfig.json
+++ b/packages/logger/tsconfig.json
@@ -1,10 +1,8 @@
 {
   "extends": "../../tsconfig.lib.json",
   "compilerOptions": {
-    "module": "CommonJS",
     "outDir": "dist",
-    "declaration": true,
-    "composite": true
+    "rootDir": "src"
   },
   "include": ["src"]
 }
