fix: update typecheck scripts to use tsc build mode consistently

--- a/packages/event-bus/package.json
+++ b/packages/event-bus/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "tsc -b",
     "dev": "tsc -b -w",
-    "typecheck": "tsc -b tsconfig.json"
+    "typecheck": "tsc -b --clean && tsc -b"
   },
   "dependencies": {
     "ioredis": "^5.7.0",
