feat(api): use @nestjs/bullmq for queues and register a debug controller

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -16,7 +16,9 @@
     "@grofit/event-bus": "workspace:*",
     "@grofit/logger": "workspace:*",
     "@grofit/contracts": "workspace:*",
+    "@nestjs/bullmq": "^11.0.3",
     "@nestjs/common": "^11.1.6",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.6",
     "dotenv": "^17.2.1",
     "@nestjs/platform-fastify": "^11.1.6",
