--- a/apps/worker/tsconfig.json
+++ b/apps/worker/tsconfig.json
@@ -7,5 +7,6 @@
     "emitDecoratorMetadata": true,
     "paths": {}
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["src/**/__tests__/**", "**/*.spec.ts", "**/*.test.ts"]
 }
