--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@duckdb/node-api": "^1.3.2-alpha.26",
+    "@grofit/analytics": "workspace:*",
     "@grofit/contracts": "workspace:*",
     "@grofit/db": "workspace:*",
     "@grofit/event-bus": "workspace:*",
